<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Storm Monitor</string>
    <string name="title_activity_map">Mapa burz</string>
    <string name="title_map_rain">Mapa opadów</string>
    <string name="menu_addcity">Dodaj miasto</string>
    <string name="menu_addcity_gps">Dodaj miasto przez GPS</string>
    <string name="menu_delete">Usuń</string>
    <string name="menu_delete_q">Usunąć miasto?</string>
    <string name="menu_details">Szczegóły</string>
    <string name="message_error">Błąd!</string>
    <string name="message_city_exists">To miasto jest już dodane</string>
    <string name="message_no_such_city">Twojego miasta nie ma w bazie</string>
    <string name="message_map_error">Pobieranie mapy nie powiodło się.</string>
    <string name="message_download_error">Pobieranie nie powiodło się.</string>
    <string name="label_storm_time">Czas do burzy: </string>
    <string name="label_storm_prob">Szanse na burzę: </string>
    <string name="label_rain_prob">Sanse na opady:</string>
    <string name="label_rain_time">Czas do opadów:</string>
    <string name="label_loading">Wczytywanie …</string>
    <string name="label_mapdate">Ostatnia aktualizacja: </string>
    <string name="label_update">Aktualizacja:</string>
    <string name="label_downloading">Trwa pobieranie …</string>
    <string name="text_about">Autor: Michał Jakubowski (revanmj)\n\nStrona: revanmj.pl/apps\n\nAplikacja wykorzystuje dane pochodzące z serwisu antistorm.eu</string>
    <string name="settings_version">Wersja %s</string>
    <string name="settings_libs_title">Wykorzystywane biblioteki:</string>
    <string name="settings_libs">- ImageViewTouch autorstwa Alessandro Crugnola (sephiroth) do wyświetlania mapy\n- SQLiteAssetHelper autorstwa Jeff Gilfelt do wczytywania bazy danych miast\n- Advanced WebView autorstwa delight.im do wyświetlania strony z mapami\n\nAplikacja wykorzystuje usługę Crashlytics do anonimowego przesyłania raportów błędów oraz Google Analytics do gromadzenia anonimowych statystyk.</string>
    <string name="button_cancel">Anuluj</string>
    <string name="button_add">Dodaj</string>
    <string name="button_ok">OK</string>
    <string name="button_map_switch_storm">Przełącz na mapę burzową</string>
    <string name="button_map_switch_rain">Przełącz na mapę opadów</string>
    <string name="search_hint">Podaj nazwę miasta</string>
    <string name="title_activity_search">Dodaj miasto</string>
    <string name="button_search">Szukaj</string>
    <string name="message_no_results">Nie znaleziono miast o podanej nazwie</string>
    <string name="dialog_update">Aktualizuj</string>
    <string name="dialog_ignore">Ignoruj</string>
    <string name="dialog_remind">Później</string>
    <string name="title_activity_details">Szczegóły</string>
    <string name="title_activity_maps">Mapy</string>
    <string name="title_activity_settings">Ustawienia</string>
    <string name="error_location_denied">Nie przyznano dostępu do danych lokalizacji!</string>
    <string name="error_no_connection">Nie masz połączenia z internetem lub usługa jest teraz niedostępna.</string>
    <string name="error_unknown">Nieznany bład. Kod: </string>
    <string name="sharedpref">sharedpref.xml</string>
    <string name="sync_period">Częstotliwość odświeżania widżetu</string>
    <string name="menu_settings">Ustawienia</string>
    <string name="map_sh_label">Mapa</string>
    <string name="map_sh_disabled">Skrót wyłączony</string>
    <string name="label_empty_list">Nie obserwujesz żadnych miast</string>
    <string name="no_location">Nie udało się ustalić lokalizacji</string>
    <string name="no_permission">Brak dostępu do lokalizacji!</string>
    <string name="action_delete">Delete city</string>
    <string name="action_title">Selected: %d</string>
    <string name="rectangle_description">Color representation of storm/rain conditions</string>
    <string name="label_search">Szukaj</string>
    <string name="wvm_dialog_title_update">Dostępna aktualizacja!</string>
    <string name="wvm_dialog_message_update">Zmiany w tej wersji:</string>
    <string name="wvm_button_ignore">Pomiń</string>
    <string name="wvm_button_remind_later">Później</string>
    <string name="wvm_button_update">Aktualizuj</string>
    <string name="wvm_button_not_now">Nie teraz</string>
</resources>
